# SSPU-ukazka-2

./: CMakeLists.txt
include/: aircraft.hpp  enemy.hpp  enemy_factory.hpp  engine.hpp  entity.hpp  game.hpp  movable_entity.hpp  player.hpp  projectile.hpp  static_entity.hpp  texture_manager.hpp  velocity.hpp
src/: aircraft.cpp  enemy.cpp  enemy_factory.cpp  engine.cpp  entity.cpp  game.cpp  health_bar.cpp  hud.cpp  main.cpp  particle.cpp  player.cpp  projectile.cpp  texture_manager.cpp
